force-app/main/default/objects/Location_Site__c/fields/Average_Home_Price_c__c.field-meta.xml
<CustomField>
    <fullName>Average_Home_Price_c__c</fullName>
    <description>Average home price in area</description>
    <inlineHelpText>Current average home price for this location</inlineHelpText>
    <label>Average_Home_Price__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>