force-app/main/default/objects/Location_Site__c/fields/City_c__c.field-meta.xml
<CustomField>
    <fullName>City_c__c</fullName>
    <description>City name</description>
    <inlineHelpText>Enter the city name</inlineHelpText>
    <label>City__c</label>
    <length>80</length>
    <type>Text</type>
</CustomField>