force-app/main/default/objects/Location_Site__c/fields/County_c__c.field-meta.xml
<CustomField>
    <fullName>County_c__c</fullName>
    <description>County name</description>
    <inlineHelpText>Enter the county name</inlineHelpText>
    <label>County__c</label>
    <length>50</length>
    <type>Text</type>
</CustomField>