force-app/main/default/objects/Location_Site__c/fields/Crime_Rating_c__c.field-meta.xml
<CustomField>
    <fullName>Crime_Rating_c__c</fullName>
    <description>Safety/crime rating</description>
    <inlineHelpText>Excellent, Good, Fair, Poor</inlineHelpText>
    <label>Crime_Rating__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>