force-app/main/default/objects/Location_Site__c/fields/Hospitals_c__c.field-meta.xml
<CustomField>
    <fullName>Hospitals_c__c</fullName>
    <description>Nearby hospitals</description>
    <inlineHelpText>List nearby hospitals and medical facilities</inlineHelpText>
    <label>Hospitals__c</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>