force-app/main/default/objects/Location_Site__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Location/neighborhood name</description>
    <inlineHelpText>Enter the name of the location or neighborhood</inlineHelpText>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>