force-app/main/default/objects/Location_Site__c/fields/Parks_Recreation_c__c.field-meta.xml
<CustomField>
    <fullName>Parks_Recreation_c__c</fullName>
    <description>Parks and recreation</description>
    <inlineHelpText>List nearby parks and recreational facilities</inlineHelpText>
    <label>Parks_Recreation__c</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>