force-app/main/default/objects/Location_Site__c/fields/School_District_c__c.field-meta.xml
<CustomField>
    <fullName>School_District_c__c</fullName>
    <description>School district</description>
    <inlineHelpText>Enter the school district name</inlineHelpText>
    <label>School_District__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>