force-app/main/default/objects/Location_Site__c/fields/Shopping_Centers_c__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Centers_c__c</fullName>
    <description>Nearby shopping centers</description>
    <inlineHelpText>List nearby shopping centers and malls</inlineHelpText>
    <label>Shopping_Centers__c</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>