force-app/main/default/objects/Location_Site__c/fields/State_c__c.field-meta.xml
<CustomField>
    <fullName>State_c__c</fullName>
    <description>State</description>
    <inlineHelpText>Select the state</inlineHelpText>
    <label>State__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>AK</fullName>
            </value>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>