force-app/main/default/objects/Location_Site__c/fields/Walkability_Score_c__c.field-meta.xml
<CustomField>
    <fullName>Walkability_Score_c__c</fullName>
    <description>Walkability score (1-100)</description>
    <inlineHelpText>Enter walkability score from 1-100</inlineHelpText>
    <label>Walkability_Score__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>