force-app/main/default/objects/Location_Site__c/fields/Zip_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_c__c</fullName>
    <description>ZIP/Postal code</description>
    <inlineHelpText>Enter the ZIP or postal code</inlineHelpText>
    <label>Zip_Code__c</label>
    <length>10</length>
    <type>Text</type>
</CustomField>